--- a/index.html
+++ b/index.html
@@ -38,43 +38,49 @@
           points to ensure that your project is successful
         </p>
       </section>
-      <section class="container-supervisor">
-        <h3>Supervisor</h3>
-        <p>Monitors activity to identify project roadblocks</p>
+      <section class="container-section supervisor">
+        <h3 class="margin-left">Supervisor</h3>
+        <p class="margin-left">
+          Monitors activity to identify project roadblocks
+        </p>
         <img
           src="images/icon-supervisor.svg"
           alt="Icon Supervisor"
-          class="container-supervisor__img"
+          class="container-section__img"
         />
       </section>
-      <section class="container-team">
-        <h3>Team</h3>
-        <p>
+      <section class="container-section team">
+        <h3 class="margin-left">Team</h3>
+        <p class="margin-left">
           Builder Scans our talent network to create the optimal team for your
           project
         </p>
         <img
           src="images/icon-team-builder.svg"
           alt="Icon Team Builder"
-          class="container-team__img"
+          class="container-section__img"
         />
       </section>
-      <section class="container-karma">
-        <h3>Karma</h3>
-        <p>Regularly evaluates our talent to ensure quality</p>
+      <section class="container-section karma">
+        <h3 class="margin-left">Karma</h3>
+        <p class="margin-left">
+          Regularly evaluates our talent to ensure quality
+        </p>
         <img
           src="images/icon-karma.svg"
           alt="Icon Karma"
-          class="container-karma__img"
+          class="container-section__img"
         />
       </section>
-      <section class="container-calculator">
-        <h3>Calculator</h3>
-        <p>Uses data from past projects to provide better delivery estimates</p>
+      <section class="container-section calculator">
+        <h3 class="margin-left">Calculator</h3>
+        <p class="margin-left">
+          Uses data from past projects to provide better delivery estimates
+        </p>
         <img
           src="images/icon-calculator.svg"
           alt="Icon Calculator"
-          class="container-calculator__img"
+          class="container-section__img"
         />
       </section>
     </article>
