--- a/index.html
+++ b/index.html
@@ -38,50 +38,52 @@
           points to ensure that your project is successful
         </p>
       </section>
-      <section class="container-section supervisor">
-        <h3 class="margin-left">Supervisor</h3>
-        <p class="margin-left">
-          Monitors activity to identify project roadblocks
-        </p>
-        <img
-          src="images/icon-supervisor.svg"
-          alt="Icon Supervisor"
-          class="container-section__img"
-        />
-      </section>
-      <section class="container-section team">
-        <h3 class="margin-left">Team</h3>
-        <p class="margin-left">
-          Builder Scans our talent network to create the optimal team for your
-          project
-        </p>
-        <img
-          src="images/icon-team-builder.svg"
-          alt="Icon Team Builder"
-          class="container-section__img"
-        />
-      </section>
-      <section class="container-section karma">
-        <h3 class="margin-left">Karma</h3>
-        <p class="margin-left">
-          Regularly evaluates our talent to ensure quality
-        </p>
-        <img
-          src="images/icon-karma.svg"
-          alt="Icon Karma"
-          class="container-section__img"
-        />
-      </section>
-      <section class="container-section calculator">
-        <h3 class="margin-left">Calculator</h3>
-        <p class="margin-left">
-          Uses data from past projects to provide better delivery estimates
-        </p>
-        <img
-          src="images/icon-calculator.svg"
-          alt="Icon Calculator"
-          class="container-section__img"
-        />
+      <section class="container-box">
+        <section class="container-section supervisor">
+          <h3 class="margin-left">Supervisor</h3>
+          <p class="margin-left">
+            Monitors activity to identify project roadblocks
+          </p>
+          <img
+            src="images/icon-supervisor.svg"
+            alt="Icon Supervisor"
+            class="container-section__img"
+          />
+        </section>
+        <section class="container-section team">
+          <h3 class="margin-left">Team Builder</h3>
+          <p class="margin-left">
+            Builder Scans our talent network to create the optimal team for your
+            project
+          </p>
+          <img
+            src="images/icon-team-builder.svg"
+            alt="Icon Team Builder"
+            class="container-section__img"
+          />
+        </section>
+        <section class="container-section karma">
+          <h3 class="margin-left">Karma</h3>
+          <p class="margin-left">
+            Regularly evaluates our talent to ensure quality
+          </p>
+          <img
+            src="images/icon-karma.svg"
+            alt="Icon Karma"
+            class="container-section__img"
+          />
+        </section>
+        <section class="container-section calculator">
+          <h3 class="margin-left">Calculator</h3>
+          <p class="margin-left">
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img
+            src="images/icon-calculator.svg"
+            alt="Icon Calculator"
+            class="container-section__img"
+          />
+        </section>
       </section>
     </article>
     <footer>
@@ -89,7 +91,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Abraham Víctor Zaragoza Rodríguez</a>.
+        >. Coded by
+        <a href="https://github.com/17920368" target="_blank"
+          >Abraham Víctor Zaragoza Rodríguez</a
+        >.
       </p>
     </footer>
   </body>
